--- a/app/src/main/res/layout/item_divider_title.xml
+++ b/app/src/main/res/layout/item_divider_title.xml
@@ -11,12 +11,9 @@
 
     <TextView
         android:id="@+id/tv_divider_title"
+        style="@style/AppTheme.TextView.Huge.Black.Bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
