--- a/app/src/main/res/layout/fragment_cinema.xml
+++ b/app/src/main/res/layout/fragment_cinema.xml
@@ -33,6 +33,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_bar"
-        tools:listitem="@layout/item_cinema_info" />
+        tools:listitem="@layout/item_cinema_info_2" />
 
 </android.support.constraint.ConstraintLayout>
