--- a/app/src/main/res/layout/item_screening.xml
+++ b/app/src/main/res/layout/item_screening.xml
@@ -8,14 +8,10 @@
 
     <TextView
         android:id="@+id/tv_screening_date"
+        style="@style/AppTheme.TextView.Screening"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:alpha="0.87"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/screening_text_color"
-        android:textSize="13sp"
-        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,13 +19,9 @@
 
     <TextView
         android:id="@+id/tv_screening_time"
+        style="@style/AppTheme.TextView.Screening"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:alpha="0.87"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/screening_text_color"
-        android:textSize="13sp"
-        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_screening_date"
@@ -37,14 +29,10 @@
 
     <TextView
         android:id="@+id/tv_screening_price"
+        style="@style/AppTheme.TextView.Screening.Price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        android:alpha="0.54"
-        android:fontFamily="sans-serif-light"
-        android:textColor="@color/screening_text_color"
-        android:textSize="12sp"
-        android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
