--- a/app/src/main/res/layout/dialog_rate_app.xml
+++ b/app/src/main/res/layout/dialog_rate_app.xml
@@ -7,12 +7,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     app:behavior_hideable="true"
+    android:background="@drawable/shadow_bg_8dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:background="@drawable/shadow" />
 
     <LinearLayout
         android:layout_width="match_parent"
