Add dialog rate app with logic

--- a/app/src/main/res/layout/dialog_rate_app.xml
+++ b/app/src/main/res/layout/dialog_rate_app.xml
@@ -38,7 +38,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/bt_review"
+        android:id="@+id/bt_rate_app"
         style="@style/AppTheme.Button.Accent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
