--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -117,7 +117,7 @@
         tools:targetApi="lollipop" />
 
     <Button
-        android:id="@+id/bt_review"
+        android:id="@+id/bt_rate_app"
         style="@style/AppTheme.Button.Accent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
