Update Settings color. Add rateApp() method()

--- a/app/src/main/res/layout/item_setting.xml
+++ b/app/src/main/res/layout/item_setting.xml
@@ -13,20 +13,22 @@
         android:layout_height="24dp"
         android:layout_gravity="center_vertical"
         android:src="@drawable/ic_movie_star"
-        android:tint="@color/subtitle_color"
+        android:scaleType="center"
+        android:tint="@color/settings_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_setting_title"
-        style="@style/AppTheme.TextView.Large.Black.Subtitle"
+        style="@style/AppTheme.TextView.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:ellipsize="end"
         android:fontFamily="sans-serif-medium"
         android:lines="1"
+        android:textColor="@color/settings_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_setting_icon"
         app:layout_constraintTop_toTopOf="parent"
@@ -37,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:textColor="@color/subtitle_color"
+        android:textColor="@color/settings_color"
         android:textSize="12sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
