--- a/app/src/main/res/layout/item_cinema_info_2.xml
+++ b/app/src/main/res/layout/item_cinema_info_2.xml
@@ -98,10 +98,14 @@
         <TextView
             android:id="@+id/tv_web_site"
             style="@style/AppTheme.TextView.Medium.Black"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="56dp"
+            android:layout_marginRight="16dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="www.angleterrecinema.ru" />
